Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-20360

tunefs.lustre silently ignores --mountfsoptions-only changes

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      tunefs.lustre exits with rc 0 without writing anything when --mountfsoptions
      is the only change, silently discarding the new mount options (old options
      still used on next mount). 

      Reproduce:

      tunefs.lustre --mountfsoptions=<new opts> /dev/XXX  (no other option)
      then --print shows the opts unchanged. Adding any other option (e.g. --param)
      makes it persist.

       

      Found by commit-hunter-v1.

            skoyama Sohei Koyama
            skoyama Sohei Koyama
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: