LU-20360 utils: fix tunefs.lustre dropping mountfsoptions

tunefs.lustre exits rc 0 without writing when --mountfsoptions (-o)
is the only option given, silently dropping the new mount options.

The -o value lands in @mountopts and is copied into ldd_mount_opts
only after the "no change" memcmp shortcut from LU-19740 runs, so
@mop still matches disk and the write is skipped. Another ldd-
modifying option (e.g. --param) hides the bug by changing @mop.

Skip the shortcut when mount options were given, so the later
ldd_mount_opts update is always written. Add conf-sanity test_88a
and rename the existing test_88 to test_88b (a bare test_88
alongside test_88a cannot be selected on its own via ONLY=).

Fixes: 34e1e7b85abc ("LU-19740 utils: Avoid redundant rewrite for tunefs.lustre")
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: Ie2963fc0d48bb6f56272001ea8889031f2b48a36
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/66624
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Xiao Yang <xyang@ddn.com>